			     BZFlag Release Notes
			     ====================

BZFlag 1.12.0  (was 1.11.x)
---------------------------

* Tabbed Message Panel - Scott Wichser
* Fonts settable via BZDB - Daniel Remenak
* New font management system and fonts - Daniel Remenak, Jeff Myers
* Reduce client and server network utilization via tolerance tweaking
	- Alfredo Tupone, Sean Morrison
* WorldWeapons and EntryZones are saved client-side - Dave Rodgers
* Improved client map saves using map 'options' - Dave Rodgers
* Autopilot is now capable of playing CTF - Ian Agar
* bzadmin can now send and receive team and admin messages - Lars Luthman
* Added _deadUnder - Dave Rodgers
* bzadmin's curses menu will now update automagically - Lars Luthman
* Added message filter editor for bzadmin using menu or cmds - Lars Luthman 
* Added team flag safety zones - Dave Rodgers
* Added MsgScoreOver and MsgTimeUpdate to BZAdmin - Ian Agar
* Have BZAdmin allow whitespace in callsign and host - Ian Agar
* Prevent message flooding/spamming - Ian Agar
* Consolidated polling system bzfs options (-poll) - Ian Agar, Sean Morrison
* Improved server pause cheat detection and reporting - Ian Agar, Sean Morrison
* Changed the way Roaming keys drives the Observer - Alfredo Tupone 
* Added configuration of driving keys - Alfredo Tupone
* Server is now valgrind-happy - Alfredo Tupone, Daniel Remenak, Sean Morrison
* Limit quick rejoins - Dave Rodgers
* Added 'options' section to world maps - Dave Rodgers
* Added the '-set <name> <value>' option to bzfs - Dave Rodgers
* Throw away bad or early links in world files - Tim Riker
* Added Record/Replay feature - Dave Rodgers
* Added Random teleporter destinations - Dave Rodgers
* Added Lag bad flag - Dave Rodgers
* Poll to reset flags and Poll-cheating prevention - Ian Agar
* Flag and Tank Entry Zones - Dave Brosius
* Spawn improvements - Dave Brosius, Daniel Remenak
* Added MAC's Agility (aka Dodge) flag - Sean Morrison